--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ after_success:
     - ls -lh ${TRAVIS_BUILD_DIR}/wheelhouse/
     - |
       for artifact in ${TRAVIS_BUILD_DIR}/wheelhouse/*.*; do
-          mv $artifact ${artifact/$VERSION/$VERSION.$RC};
+          mv $artifact ${artifact/$VERSION/$VERSION};
       done
     - source deploy_travis.sh
     - deploy
